--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.6.7",
     "next": "14.1.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/node": "^20",
